--- a/src/main/resources/templates/reserva_de_empleado.html
+++ b/src/main/resources/templates/reserva_de_empleado.html
@@ -50,7 +50,7 @@
 <!--            <div class="col-lg-10 order-lg-1">-->
                 <div class="p-5">
                     <h2 class="display-8">COMPLETE LOS DATOS REQUERIDOS</h2>
-                    <form class="col-lg-4 " action="/vehiculo/resEmp/" method="GET">
+                    <form class="col-lg-4 " action="/reserva/resEmp/" method="GET">
                         <input type="hidden" name="ide" th:value="${empleadoLog.id}">
                         <label>DNI del Cliente</label>
                         <input type="text" class="form-control" name="dni"/><br/>
