se corrigio el solapado de contratos

--- a/src/main/resources/templates/admin_v.html
+++ b/src/main/resources/templates/admin_v.html
@@ -58,6 +58,7 @@
                     <th scope="col">GAMA</th>
                     <th scope="col">COMBUSTIBLE</th>
                     <th scope="col">PRECIO</th>
+                    <th scope="col">ESTADO</th>
                     <th scope="col">Acciones</th>
                 </tr>
                 </thead>
@@ -72,6 +73,7 @@
                     <td class="mayus"scope="row" th:text="${vehiculo.typeGama}">
                     <td class="mayus"scope="row" th:text="${vehiculo.combustible}">
                     <td class="mayus"scope="row" th:text="${vehiculo.precio}">
+                    <td class="mayus"scope="row" th:text="${vehiculo.operativo}">
                     <td>
                         <!-- Declaramos y enviamos el valor de la variable action -->
 <!--                    /**/-->
