se corrigio el Exito y edit

--- a/src/main/resources/templates/admin_p.html
+++ b/src/main/resources/templates/admin_p.html
@@ -65,7 +65,7 @@
                     <td class="mayus"scope="row" th:text="${emleado.nombre}">
                     <td class="mayustt"scope="row" th:text="${emleado.apellido}">
                     <td scope="row" th:text="${emleado.dni}">
-                    <td class="mayus"scope="row" th:text="${emleado.mail}">
+                    <td class=""scope="row" th:text="${emleado.mail}">
                     <td class="mayus"scope="row" th:text="${emleado.typeEmpleado}">
                     <td>
                         <!-- Declaramos y enviamos el valor de la variable action -->
