--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
     <div class="masthead-content">
         <div class="container">
             <h1 class="masthead-heading mb-0">Alquiler de Vehiculos</h1>
-            <h2 class="masthead-subheading mb-0">Trabajo Final Practicas Profecionalizante.</h2>
+            <h2 class="masthead-subheading mb-0">Trabajo Final Practica Profecionalizante.</h2>
             <a href="/registro" class="btn btn-primary btn-xl rounded-pill mt-5">¡Registrate!</a>
         </div>
     </div>
