--- a/src/main/resources/templates/exitoGeneral.html
+++ b/src/main/resources/templates/exitoGeneral.html
@@ -28,16 +28,12 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-        <a  class="navbar-brand" th:href="@{/empleado/ventas/(correo=${empleadoLog.mail})}">Alquiler de Vehículos - Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" th:href="${home}">Home</a>
+
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/reserva/hreservas(id=${clienteLog.id})}">Historial</a>
-
+                    <!--            <a class="nav-link" href="/registro">Registro</a>-->
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/">Salir</a>
@@ -50,7 +46,9 @@
 <header class="masthead text-center text-white">
     <div class="masthead-content">
         <div class="container">
-            <h3 class="masthead-subheading mb-0">LA RESERVA ESTÁ REGISTRADA.</h3>
+            <h1 class="masthead-heading mb-0" th:text="${titulo1}"></h1>
+            <h2 class="masthead-subheading mb-0" th:text="${titulo2}"></h2>
+<!--            <input type="hidden" name="idc" th:value="${clienteLog.id}">-->
         </div>
     </div>
 
@@ -59,14 +57,10 @@
 <section>
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-lg-6 order-lg-2">
+            <div class="col-lg-10 order-lg-1" th:if="descripcion != null">
                 <div class="p-5">
-                </div>
-            </div>
-            <div class="col-lg-10 order-lg-1">
-                <div class="p-5">
-                    <h2> TOME NOTA!! EL NÚMERO DE RESERVA ES:</h2>
-                    <h1 th:text="${id_ures}" class="display-4"></h1>
+                    <h2 th:text="${descripcion}"></h2>
+                    <h1 th:text="${numero}" class="display-4"></h1>
                 </div>
             </div>
         </div>
