se quita los mensajes por consola. se corrige index de empleado y cliente

--- a/src/main/resources/templates/index_cliente.html
+++ b/src/main/resources/templates/index_cliente.html
@@ -63,7 +63,7 @@
                 <label>Fecha de Devolución</label>
                 <input type="Date" class="form-control" name="fDevolucion"/>
                 <br/>
-<!--                <p th:></p>-->
+                <!--                <p th:></p>-->
                 <button type="submit" class="btn btn-primary">Buscar</button>
                 <br/>
             </form>
@@ -71,34 +71,35 @@
             <div class="row align-items-center">
 
                 <br/>
-<!--                <h1 class="row align-items-center">Estos son nuestros Vehículos </h1>-->
-<!--            <table class="table table-hover">-->
-<!--                <thead>-->
-<!--                <tr>-->
-<!--                    <th scope="col" class="mayus">MARCA</th>-->
-<!--                    <th scope="col" class="mayus">MODELO</th>-->
-<!--                    <th scope="col">CILINDRADA</th>-->
-<!--                    <th scope="col" class="mayus">TIPO</th>-->
-<!--                    <th scope="col" class="mayus">GAMA</th>-->
-<!--                    <th scope="col" class="mayus">COMBUSTIBLE</th>-->
-<!--                    <th scope="col">Acciones</th>-->
-<!--                </tr>-->
-<!--                </thead>-->
-<!--                <tbody>-->
-<!--                <tr th:each="vehiculo : ${autos}">-->
-<!--                    <td scope="row" class="mayus" th:text="${vehiculo.marca}">-->
-<!--                    <td scope="row" class="mayustt" th:text="${vehiculo.modelo}">-->
-<!--                    <td scope="row" th:text="${vehiculo.cilindradaMotor}">-->
-<!--                    <td scope="row" class="mayus" th:text="${vehiculo.tipoVehiculo}">-->
-<!--                    <td scope="row" class="mayus" th:text="${vehiculo.typeGama}">-->
-<!--                    <td scope="row" class="mayus" th:text="${vehiculo.combustible}">-->
-<!--                    <td>-->
-<!--                        &lt;!&ndash; Declaramos y enviamos el valor de la variable action &ndash;&gt;-->
-<!--                        <a th:href="@{/reserva/generar_reserva(idv=__${vehiculo.id}__,idc=${clienteLog.id})}">Reservar</a>-->
-<!--                    </td>-->
-<!--                </tr>-->
-<!--                </tbody>-->
-<!--            </table>-->
+                <!--                <h1 class="row align-items-center">Estos son nuestros Vehículos </h1>-->
+                <!--            <table class="table table-hover">-->
+                <!--                <thead>-->
+                <!--                <tr>-->
+                <!--                    <th scope="col" class="mayus">MARCA</th>-->
+                <!--                    <th scope="col" class="mayus">MODELO</th>-->
+                <!--                    <th scope="col">CILINDRADA</th>-->
+                <!--                    <th scope="col" class="mayus">TIPO</th>-->
+                <!--                    <th scope="col" class="mayus">GAMA</th>-->
+                <!--                    <th scope="col" class="mayus">COMBUSTIBLE</th>-->
+                <!--                    <th scope="col">Acciones</th>-->
+                <!--                </tr>-->
+                <!--                </thead>-->
+                <!--                <tbody>-->
+                <!--                <tr th:each="vehiculo : ${autos}">-->
+                <!--                    <td scope="row" class="mayus" th:text="${vehiculo.marca}">-->
+                <!--                    <td scope="row" class="mayustt" th:text="${vehiculo.modelo}">-->
+                <!--                    <td scope="row" th:text="${vehiculo.cilindradaMotor}">-->
+                <!--                    <td scope="row" class="mayus" th:text="${vehiculo.tipoVehiculo}">-->
+                <!--                    <td scope="row" class="mayus" th:text="${vehiculo.typeGama}">-->
+                <!--                    <td scope="row" class="mayus" th:text="${vehiculo.combustible}">-->
+                <!--                    <td>-->
+                <!--                        &lt;!&ndash; Declaramos y enviamos el valor de la variable action &ndash;&gt;-->
+                <!--                        <a th:href="@{/reserva/generar_reserva(idv=__${vehiculo.id}__,idc=${clienteLog.id})}">Reservar</a>-->
+                <!--                    </td>-->
+                <!--                </tr>-->
+                <!--                </tbody>-->
+                <!--            </table>-->
+            </div>
         </div>
     </div>
 </section>
